<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddBadHabits">

    <EditText
        android:id="@+id/badHabit"
        android:layout_width="406dp"
        android:layout_height="76dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/badHabit"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TimePeriod"
        android:layout_width="405dp"
        android:layout_height="74dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/TimePeriod"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/badHabit" />

    <EditText
        android:id="@+id/distribution"
        android:layout_width="411dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Distribution"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimePeriod" />

    <EditText
        android:id="@+id/TimeTorecover"
        android:layout_width="400dp"
        android:layout_height="63dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/RecoverTime"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distribution" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="154dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/btnBlue"
        android:text="Add"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/backbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeTorecover"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginTop="18dp"
        android:text="@string/addhabit"
        android:textAlignment="center"
        android:textColor="@color/btn4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="115dp" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/btn4"
        android:text="@string/Backbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>