<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/BadHabitLable"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/BadHabitLable"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewHodertextView1"
        android:layout_width="293dp"
        android:layout_height="32dp"
        android:fontFamily="monospace"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BadHabitLable" />

    <TextView
        android:id="@+id/TimePeriodLable"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/TimePeriodLable"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHodertextView1" />

    <TextView
        android:id="@+id/ViewHoldertextView2"
        android:layout_width="297dp"
        android:layout_height="32dp"
        android:fontFamily="monospace"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimePeriodLable" />

    <TextView
        android:id="@+id/DistributionLable"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/DistriButionLable"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewHoldertextView2" />

    <TextView
        android:id="@+id/viewHolderText3"
        android:layout_width="297dp"
        android:layout_height="32dp"
        android:fontFamily="monospace"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DistributionLable" />

    <TextView
        android:id="@+id/TimeTocureLable"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/TimeToCureLable"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHolderText3" />

    <TextView
        android:id="@+id/viewHoldertext4"
        android:layout_width="297dp"
        android:layout_height="32dp"
        android:fontFamily="monospace"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeTocureLable" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/Update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHoldertext4" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/redbtn"
        android:text="@string/Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHoldertext4" />

</androidx.constraintlayout.widget.ConstraintLayout>
