<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".StartPage">

    <TextView
        android:id="@+id/header"
        android:layout_width="310dp"
        android:layout_height="79dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Title"
        android:textColor="@color/btnText"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="341dp"
        android:layout_height="307dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/badhabit_tracker" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="403dp"
        android:layout_height="41dp"
        android:layout_marginBottom="72dp"
        android:text="@string/description1"
        android:textColor="@color/textcolor2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/startbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startbtn"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:layout_marginBottom="69dp"
        android:backgroundTint="@color/btnBlue"
        android:text="@string/View"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>